--- a/_config.yml
+++ b/_config.yml
@@ -212,13 +212,13 @@ kramdown:
 
 
 # These settings control the types of collections used by the template
-#collections:
+collections:
   #teaching:
   #  output: false
   #  permalink: /:collection/:path/
-  #publications:
-  #  output: true
-  #  permalink: /:collection/:path/
+  publications:
+    output: true
+    permalink: /:collection/:path/
   #portfolio:
   #  output: false
   #  permalink: /:collection/:path/
@@ -228,25 +228,25 @@ kramdown:
 
 
 # These settings control how pages and collections are included in the site
-#defaults:
-#  # _posts
-#  - scope:
-#      path: ""
-#      type: posts
-#    values:
-#      layout: single
-#      author_profile: true
-#      read_time: true
-#      comments: true
-#      share: true
-#      related: true
-#  # _pages
-#  - scope:
-#      path: ""
-#      type: pages
-#    values:
-#      layout: single
-#      author_profile: true
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: single
+      author_profile: true
+      read_time: true
+      comments: true
+      share: true
+      related: true
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
 #  # _teaching
 #  - scope:
 #      path: ""
@@ -256,15 +256,15 @@ kramdown:
 #      author_profile: true
 #      share: true
 #      comments: true
-#  # _publications
-#  - scope:
-#      path: ""
-#      type: publications
-#    values:
-#      layout: single
-#      author_profile: true
-#      share: true
-#      comments: true
+  # _publications
+  - scope:
+      path: ""
+      type: publications
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comments: true
 #  # _portfolio
 #  - scope:
 #      path: ""
